<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ly"
    android:background="@drawable/gradient_2"
    tools:context=".ErrorNetActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_cloud_off_black_24dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/error_text"
        android:layout_margin="18dp"
        android:textColor="#ffee00"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:onClick="click"
        android:background="@drawable/btn"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:textColor="#ffff"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/Button"
        android:layout_marginTop="10dp"
        android:onClick="click2"
        android:background="@drawable/btn"
        android:text="@string/try_other"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:visibility="gone"
        android:textSize="25sp"
        android:textColor="#ffff"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/adContainerError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </RelativeLayout>



</RelativeLayout>
