<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ly"
    android:background="@drawable/gradient_2"
    tools:context=".NameInputActivity">


    <com.github.ybq.android.spinkit.SpinKitView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView"
        style="@style/SpinKitView.Large.FoldingCube"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        app:SpinKit_Color="#ffffff" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/chooseText_activity2"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhile"
        android:layout_below="@+id/imageView"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border_input"
        android:ems="10"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="30dp"
        android:layout_margin="20dp"
        android:hint="@string/editText_activity2"
        android:textColor="#ffffff"
        android:textColorHint="#f7eded"
        android:textCursorDrawable="@null"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/Button"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/edtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="click"
        android:background="@drawable/btn"
        android:text="@string/next"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:textColor="#ffff"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </RelativeLayout>


</RelativeLayout>
